# ti-flashstream-flasher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
data/: .FuelGauge_MainboardREV2_02172017.bq.fs.swp
src/: main.cpp
src/filestream/: filestream_parser.h
src/filestream_parser/: filestream_parser.cpp  filestream_parser.h
src/i2c/: i2c_interface.cpp  i2c_interface.h
src/i2c_interface/: i2c_interface.cpp  i2c_interface.h
ti-flashstream-flasher/: flashstream.py  main.py
